# skm

./: .gitignore  CODE_REVIEW.md  COMPLETION_REPORT.md  Cargo.toml  README.md  docker-compose.yml
.specify/: constitution.md  plan.md  spec.md  tasks.md
src/: lib.rs  main.rs
src/analyzer/: mod.rs  priority.rs  requirements.rs  stage.rs
src/autopilot/: actions.rs  approval.rs  levels.rs  mod.rs
src/meta/: config.rs  history.rs  mod.rs  state.rs
src/rag/: embeddings.rs  mod.rs  query.rs  storage.rs
src/reporter/: digest.rs  json.rs  markdown.rs  mod.rs  table.rs
src/scanner/: finder.rs  git.rs  mod.rs  parser.rs
src/session/: handoff.rs  mod.rs  tmux.rs
