[package]
name = "skm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
walkdir = "2.0"
git2 = "0.18"
notify = "6.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
env_logger = "0.10"
serde_json = "1.0"
regex = "1.10"
